Fixed screen horizontal scroll and styled account route

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
-body {
-  margin: 0;
+html,body{
+  overflow-x: hidden;
+  margin: 0px;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100% !important;
+  padding: 0px;
+  width: 100vw;
 }
 
 code {
